Fixed blurry text in ACL Editor. (RM-3830)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@20339 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/SecurityManager/Clients.Web/res/Themes/ClassicBlue/Html/Style.css
+++ b/SecurityManager/Clients.Web/res/Themes/ClassicBlue/Html/Style.css
@@ -159,8 +159,10 @@ table.accessControlEntriesTable th.titleCellVertical
 
 table.accessControlEntriesTable th.titleCellVertical div
 {
-  writing-mode: tb-rl; 
-  filter: FlipV() FlipH();
+  writing-mode: tb-rl;
+  background-color: white;
+  zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   padding-top: 0.25em;
   display: inline-block;
   display: -moz-inline-box;
