--- a/SecurityManager/Clients.Web/res/Themes/NovaBlue/Html/Style.css
+++ b/SecurityManager/Clients.Web/res/Themes/NovaBlue/Html/Style.css
@@ -157,7 +157,9 @@ table.accessControlEntriesTable th.titleCellVertical
 table.accessControlEntriesTable th.titleCellVertical div
 {
   writing-mode: tb-rl;
-  filter: FlipV() FlipH();
+  background-color: white;
+  zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   padding-top: 0.25em;
   display: inline-block;
   display: -moz-inline-box;
